# OpenGLCMake

./: .gitignore  CMakeLists.txt  CMakePresets.json  InstallLibraries.py  README.md  WinBuild.py  glad.c  main.cpp  run.bat
include/glad/: glad.h
